tests/fixtures/invalid/use_after_free.lby
fn main -> i64
    let ptr ptr_i64 = alloc(1)
    dealloc(ptr)
    unsafe
        ptr_read(ptr)
